# docs/swagger.yaml
@@ -1,5 +1,37 @@
 basePath: /v1
 definitions:
+  entity.Item:
+    properties:
+      name:
+        type: string
+      quantity:
+        type: integer
+      size:
+        type: string
+      unique_id:
+        type: string
+      warehouse_id:
+        type: integer
+    type: object
+  entity.Warehouse:
+    properties:
+      availability:
+        type: boolean
+      name:
+        type: string
+    type: object
+  v1.createWarehouseRequest:
+    properties:
+      warehouse:
+        $ref: '#/definitions/entity.Warehouse'
+    type: object
+  v1.itemsCreateRequest:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/entity.Item'
+        type: array
+    type: object
   v1.reserveRequest:
     properties:
       ids:
@@ -25,6 +57,67 @@ info:
   title: Lamoda Warehouses API
   version: "1.0"
 paths:
+  /items:
+    put:
+      consumes:
+      - application/json
+      description: Create items in warehouse
+      operationId: createItem
+      parameters:
+      - description: items
+        in: body
+        name: item
+        required: true
+        schema:
+          $ref: '#/definitions/v1.itemsCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/v1.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Create items
+      tags:
+      - itmes
+  /items/{warehouse_id}/quantity:
+    get:
+      consumes:
+      - application/json
+      description: Count items in warehouse
+      operationId: getItemsQuantity
+      parameters:
+      - description: warehouse_id
+        in: path
+        name: warehouse_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/v1.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Get items quantity
+      tags:
+      - itmes
   /reserve:
     delete:
       consumes:
@@ -82,4 +175,35 @@ paths:
       summary: Reserve item
       tags:
       - reservation
+  /warehouses:
+    post:
+      consumes:
+      - application/json
+      description: Create warehouse by provided data
+      operationId: createWarehouse
+      parameters:
+      - description: warehouse
+        in: body
+        name: warehouse
+        required: true
+        schema:
+          $ref: '#/definitions/v1.createWarehouseRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/v1.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Create warehouse
+      tags:
+      - warehouses
 swagger: "2.0"
